@@ -1,3 +1,7 @@
+2023-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* example/generate_heightmap_obj.rb: Added
+
 2023-02-15  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* example/models_heightmap.rb: Added
